tests/error/ptr_assign_const.gw
1 :=> var Ptr<~int~> pd;
